fix stretch when text wraps

--- a/easy-ui-react/src/BreadcrumbNavigation/BreadcrumbNavigation.module.scss
+++ b/easy-ui-react/src/BreadcrumbNavigation/BreadcrumbNavigation.module.scss
@@ -4,7 +4,6 @@
   border: design-token("shape.border_width.1") solid
     theme-token("color.neutral.300");
   display: inline-flex;
-  align-items: center;
 }
 
 .backButtonContainer {
